--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -17,5 +17,59 @@
 		<div id='bottombox'>
 			<button id='button-new-container'>Create a new container…</button>
 		</div>
+		<div id='confirm' class='modal'>
+			<div class='modal-content'>
+				<p id='confirm-message'>Do you want to proceed?</p>
+				<div class='modal-actions'>
+					<button id='confirm-cancel-button'>Cancel</button>
+					<button id='confirm-ok-button' class='button-default'>OK</button>
+				</div>
+			</div>
+		</div>
+		<div id='new-container' class='modal'>
+			<div class='modal-content'>
+				<h2 class='modal-title'>New container</h2>
+				<div class='input-box'>
+					<label for='new-container-name'>Name</label>
+					<input class='input-box-input' type='text' name='name' id='new-container-name'/>
+				</div>
+				<div class='input-box'>
+					<label for='new-container-icon'>Icon</label>
+					<select id='new-container-icon' class='input-box-input'>
+						<option value='fingerprint'>fingerprint</option>
+						<option value='briefcase'>briefcase</option>
+						<option value='dollar'>dollar</option>
+						<option value='cart'>cart</option>
+						<option value='circle'>circle</option>
+						<option value='gift'>gift</option>
+						<option value='vacation'>vacation</option>
+						<option value='food'>food</option>
+						<option value='fruit'>fruit</option>
+						<option value='pet'>pet</option>
+						<option value='tree'>tree</option>
+						<option value='chill'>chill</option>
+						<option value='fence'>fence</option>
+					</select>
+				</div>
+				<div class='input-box'>
+					<label for='new-container-color'>Color</label>
+					<select id='new-container-color' class='input-box-input'>
+						<option value='blue'>blue</option>
+						<option value='turquoise'>turquoise</option>
+						<option value='green'>green</option>
+						<option value='yellow'>yellow</option>
+						<option value='orange'>orange</option>
+						<option value='red'>red</option>
+						<option value='pink'>pink</option>
+						<option value='purple'>purple</option>
+						<option value='toolbar'>toolbar</option>
+					</select>
+				</div>
+				<div class='modal-actions'>
+					<button id='new-container-cancel-button'>Cancel</button>
+					<button id='new-container-ok-button' class='button-default'>OK</button>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
