--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
 		<meta charset='utf-8'/>
-		<title>Tab Policy: Background page</title>
+		<title>Tab Array: Popup page</title>
 		<link rel='stylesheet' href='popup.css'/>
 		<script type='module' src='popup.mjs'></script>
 	</head>
