--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -7,9 +7,6 @@
 		<script type='module' src='popup.mjs'></script>
 	</head>
 	<body>
-		<div id='searchbox-container'>
-			<input type='search' name='search' id='searchbox-input' autocomplete='off'/>
-		</div>
 		<div id='main'>
 			<button id='button-hide-inactive'>Collapse containers</button>
 			<ul id='menuList'></ul>
@@ -28,7 +25,7 @@
 		</div>
 		<div id='new-container' class='modal'>
 			<div class='modal-content'>
-				<h2 class='modal-title'>New container</h2>
+				<h2 class='modal-title'>Editing a container</h2>
 				<div class='input-box'>
 					<label for='new-container-name'>Name</label>
 					<input class='input-box-input' type='text' name='name' id='new-container-name'/>
