--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id='main'>
-			<button id='button-hide-inactive'>Collapse containers</button>
+			<button id='button-hide-inactive'>Collapse containers on this window</button>
 			<ul id='menuList'></ul>
 		</div>
 		<div id='bottombox'>
