menu link to addon page

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,6 +10,7 @@
 		<div id='main'>
 			<button id='button-hide-inactive'>buttonHideInactiveContainers</button>
 			<ul id='menuList'></ul>
+			<button id='button-about-addon'>buttonAboutAddon</button>
 		</div>
 		<div id='bottombox'>
 			<button id='button-new-container'>buttonNewContainer</button>
