popup buttons style fix

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,12 +8,18 @@
 	</head>
 	<body>
 		<div id='main'>
-			<button id='button-hide-inactive'>buttonHideInactiveContainers</button>
+			<button id='button-hide-inactive'>
+				<span class='button-text'>buttonHideInactiveContainers</span>
+			</button>
 			<ul id='menuList'></ul>
-			<button id='button-about-addon'>buttonAboutAddon</button>
+			<button id='button-about-addon'>
+				<span class='button-text'>buttonAboutAddon</span>
+			</button>
 		</div>
 		<div id='bottombox'>
-			<button id='button-new-container'>buttonNewContainer</button>
+			<button id='button-new-container'>
+				<span class='button-text'>buttonNewContainer</span>
+			</button>
 		</div>
 		<div id='confirm' class='modal'>
 			<div class='modal-content'>
