menu item to open settings

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -7,7 +7,7 @@
 		<script type='module' src='popup.mjs'></script>
 	</head>
 	<body>
-		<div id='main'>
+		<div id='main' class='menu-part'>
 			<button id='button-hide-inactive'>
 				<span class='button-text'>buttonHideInactiveContainers</span>
 			</button>
@@ -15,8 +15,11 @@
 			<button id='button-about-addon'>
 				<span class='button-text'>buttonAboutAddon</span>
 			</button>
+			<button id='button-settings'>
+				<span class='button-text'>buttonSettings</span>
+			</button>
 		</div>
-		<div id='bottombox'>
+		<div id='bottombox' class='menu-part'>
 			<button id='button-new-container'>
 				<span class='button-text'>buttonNewContainer</span>
 			</button>
