option to enable privacy.resistFingerprinting

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -15,5 +15,9 @@
         <input type='checkbox' id='input-firstPartyIsolate'/>
         <label for='input-firstPartyIsolate'>labelFirstPartyIsolate</label>
     </p>
+    <p>
+        <input type='checkbox' id='input-resistFingerprinting'/>
+        <label for='input-resistFingerprinting'>labelResistFingerprinting</label>
+    </p>
 </body>
 </html>
