option gesture.dragTabBetweenContainers

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -12,6 +12,10 @@
         <label for='input-newtabKeepContainer'>labelNewTabKeepContainer</label>
     </p>
     <p>
+        <input type='checkbox' id='input-dragTabToChangeContainer'/>
+        <label for='input-dragTabToChangeContainer'>labelDragTabToChangeContainer</label>
+    </p>
+    <p>
         <input type='checkbox' id='input-firstPartyIsolate'/>
         <label for='input-firstPartyIsolate'>labelFirstPartyIsolate</label>
     </p>
