--- a/src/options/options.html
+++ b/src/options/options.html
@@ -7,6 +7,8 @@
     <script type='module' src='/options/options.mjs'></script>
 </head>
 <body>
+    <h2 id='optionsHeadingExperimental'>optionsHeadingExperimental</h2>
+    <p id='optionsDescriptionExperimental'>optionsDescriptionExperimental</p>
     <p>
         <input type='checkbox' id='input-newtabKeepContainer'/>
         <label for='input-newtabKeepContainer'>labelNewTabKeepContainer</label>
@@ -15,6 +17,8 @@
         <input type='checkbox' id='input-dragTabToChangeContainer'/>
         <label for='input-dragTabToChangeContainer'>labelDragTabToChangeContainer</label>
     </p>
+    <h2 id='optionsHeadingFirefox'>optionsHeadingFirefox</h2>
+    <p id='optionsDescriptionFirefox'>optionsDescriptionFirefox</p>
     <p>
         <input type='checkbox' id='input-firstPartyIsolate'/>
         <label for='input-firstPartyIsolate'>labelFirstPartyIsolate</label>
