wip - panorama grid, etc.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -28,6 +28,9 @@
 			<button id='button-hide-inactive'>
 				<span class='button-text'>buttonHideInactiveContainers</span>
 			</button>
+			<button id='button-panorama'>
+				<span class='button-text'>buttonPanorama</span>
+			</button>
 			<ul id='menuList'></ul>
 			<button id='button-about-addon'>
 				<span class='button-text'>buttonAboutAddon</span>
