integer vesioning & install.js

--- a/src/background.html
+++ b/src/background.html
@@ -21,6 +21,7 @@
     <meta charset='utf-8'/>
     <title></title>
     <script type='module' src='background-wrapper.mjs'></script>
+    <script src='install.js'></script>
   </head>
   <body></body>
 </html>
