--- a/src/options/options.html
+++ b/src/options/options.html
@@ -34,6 +34,10 @@
         <input type='checkbox' id='input-dragTabToChangeContainer'/>
         <label for='input-dragTabToChangeContainer'>labelDragTabToChangeContainer</label>
     </p>
+    <p>
+        <input type='checkbox' id='input-selectContainerExternalTabs'/>
+        <label for='input-selectContainerExternalTabs'>labelSelectContainerExternalTabs</label>
+    </p>
     <h2 id='optionsHeadingFirefox'>optionsHeadingFirefox</h2>
     <p id='optionsDescriptionFirefox'>optionsDescriptionFirefox</p>
     <p>
