--- a/src/options/options.html
+++ b/src/options/options.html
@@ -38,6 +38,14 @@
         <input type='checkbox' id='input-selectContainerExternalTabs'/>
         <label for='input-selectContainerExternalTabs'>labelSelectContainerExternalTabs</label>
     </p>
+    <p>
+        <label for='select-externalTabContainerOption'>labelSelectExternalTabContainerOption</label><br/>
+        <select id='select-externalTabContainerOption'>
+            <option value='choose' selected=''>labelOptionExternalTabChooseContainer</option>
+            <option value='sticky'>labelOptionExternalTabStickyContainer</option>
+            <option value='disabled'>labelOptionExternalTabDisabled</option>
+        </select>
+    </p>
     <h2 id='optionsHeadingFirefox'>optionsHeadingFirefox</h2>
     <p id='optionsDescriptionFirefox'>optionsDescriptionFirefox</p>
     <p>
