option to show index tabs for containers

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -38,6 +38,14 @@
             <option value='disabled'>labelExternalTabOptionDisabled</option>
         </select>
     </p>
+    <p>
+        <label for='select-groupIndexOption'>labelGroupIndexOption</label><br/>
+        <select id='select-groupIndexOption'>
+            <option value='always' selected=''>labelGroupIndexOptionAlways</option>
+            <option value='collapsed'>labelGroupIndexOptionCollapsed</option>
+            <option value='never'>labelGroupIndexOptionNever</option>
+        </select>
+    </p>
     <h2 id='optionsHeadingFirefox'>optionsHeadingFirefox</h2>
     <p id='optionsDescriptionFirefox'>optionsDescriptionFirefox</p>
     <p>
