--- a/src/index/index.html
+++ b/src/index/index.html
@@ -26,5 +26,6 @@
     <script type='module' src='index.mjs'></script>
   </head>
   <body>
+    <canvas hidden='' id='icon'></canvas>
   </body>
 </html>
