larger popup size option

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -24,6 +24,14 @@
     <script type='module' src='/options/options.mjs'></script>
 </head>
 <body>
+    <h2 id='optionsHeadingAppearance'>optionsHeadingAppearance</h2>
+    <p>
+        <label for='select-popupSize'>labelPopupSize</label><br/>
+        <select id='select-popupSize'>
+            <option value='standard' selected=''>labelPopupSizeStandard</option>
+            <option value='large'>labelPopupSizeLarge</option>
+        </select>
+    </p>
     <h2 id='optionsHeadingExperimental'>optionsHeadingExperimental</h2>
     <p id='optionsDescriptionExperimental'>optionsDescriptionExperimental</p>
     <p>
