--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -24,10 +24,16 @@
 		<script type='module' src='popup.mjs'></script>
 	</head>
 	<body>
-		<div id='main' class='menu-part'>
+		<div id='topbox'>
+			<div id='search-wrapper'>
+				<input type='search' id='search'/>
+			</div>
 			<button id='button-panorama'>
 				<span class='button-text'>buttonPanorama</span>
 			</button>
+		</div>
+		<div id='main' class='menu-part'>
+			
 			<ul id='menuList'></ul>
 			<button id='button-about-addon'>
 				<span class='button-text'>buttonAboutAddon</span>
