show container icon for index tabs

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -26,5 +26,8 @@
     <script type='module' src='index.mjs'></script>
   </head>
   <body>
+    <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256' width='256' height='256'>
+      <rect id='rect' x='0' y='0' width='256' height='256'/>
+    </svg>
   </body>
 </html>
