--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -37,7 +37,7 @@
 				</button>
 			</div>
 			<div id='main-inner' class='menu-part'>
-				<ul id='menuList'></ul>
+				<ul id='menuList' class='menu-list'></ul>
 				<button id='button-about-addon'>
 					<span class='button-text'>buttonAboutAddon</span>
 				</button>
@@ -47,7 +47,7 @@
 			</div>
 		</div>
 		<div id='windows' class='content'>
-			Windows
+			<ul id='windowMenuList' class='menu-list'></ul>
 		</div>
 		<div id='sites' class='content'>
 			Sites
