new window button

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -47,7 +47,12 @@
 			</div>
 		</div>
 		<div id='windows' class='content'>
-			<ul id='windowMenuList' class='menu-list'></ul>
+			<div id='windows-inner' class='menu-part'>
+				<button id='button-new-window'>
+					<span class='button-text'>buttonNewWindow</span>
+				</button>
+				<ul id='windowMenuList' class='menu-list'></ul>
+			</div>
 		</div>
 		<div id='sites' class='content'>
 			Sites
