--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -54,8 +54,9 @@
 				<ul id='windowMenuList' class='menu-list'></ul>
 			</div>
 		</div>
-		<div id='sites' class='content'>
-			Sites
+		<div id='sites' class='content' data-active-content='sites'>
+			<div id='sites-pane-top' data-content-id='sites'></div>
+			<div id='sites-pane-details' data-content-id='sites-details'></div>
 		</div>
 		<div id='bottombox' class='menu-part'>
 			<nav id='bottom-menu'>
