--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -38,12 +38,6 @@
 			</div>
 			<div id='main-inner' class='menu-part'>
 				<ul id='menuList' class='menu-list'></ul>
-				<button id='button-about-addon'>
-					<span class='button-text'>buttonAboutAddon</span>
-				</button>
-				<button id='button-settings'>
-					<span class='button-text'>buttonSettings</span>
-				</button>
 			</div>
 		</div>
 		<div id='windows' class='content'>
@@ -68,6 +62,9 @@
 				</a>
 				<a id='menu-item-sites' class='menu-item' href='#sites'>
 					<span class='button-text'>menuItemSites</span>
+				</a>
+				<a id='menu-item-settings' class='menu-item' href='#settings'>
+					<span class='button-text'>buttonSettings</span>
 				</a>
 			</nav>
 		</div>
