--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -50,7 +50,13 @@
 		</div>
 		<div id='sites' class='content' data-active-content='sites'>
 			<div id='sites-pane-top' data-content-id='sites'></div>
-			<div id='sites-pane-details' data-content-id='sites-details'></div>
+			<div id='sites-pane-details' data-content-id='sites-details'>
+				<div class='heading'>
+					<button id='site-pane-details-back-button'></button>
+					<div id='site-pane-details-domain'></div>
+				</div>
+				<div id='siteMenuList' class='menu-list'></div>
+			</div>
 		</div>
 		<div id='bottombox' class='menu-part'>
 			<nav id='bottom-menu'>
