option to clear recent sites

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -64,5 +64,10 @@
         <input type='checkbox' id='input-resistFingerprinting'/>
         <label for='input-resistFingerprinting'>labelResistFingerprinting</label>
     </p>
+    <h2 id='optionsHeadingUserData'>optionsHeadingUserData</h2>
+    <p>
+        <label for='button-clearRecentSites'>labelClearRecentSites</label><br/>
+        <button id='button-clearRecentSites'>buttonClear</button>
+    </p>
 </body>
 </html>
