--- a/src/navigation/confirm.html
+++ b/src/navigation/confirm.html
@@ -30,6 +30,7 @@
       <h1 id='heading'></h1>
       <p id='description'></p>
       <p id='prompt'></p>
+      <p><button id='button-settings' class='browser-style'></button></p>
       <div id='containers'></div>
     </div>
   </body>
