--- a/src/options/options.html
+++ b/src/options/options.html
@@ -27,20 +27,20 @@
     <h2 id='optionsHeadingAppearance'>optionsHeadingAppearance</h2>
     <p>
         <label for='select-popupSize'>labelPopupSize</label><br/>
-        <select id='select-popupSize'>
+        <select id='select-popupSize' class='browser-style'>
             <option value='standard' selected=''>labelPopupSizeStandard</option>
             <option value='large'>labelPopupSizeLarge</option>
         </select>
     </p>
     <h2 id='optionsHeadingExperimental'>optionsHeadingExperimental</h2>
     <p id='optionsDescriptionExperimental'>optionsDescriptionExperimental</p>
-    <p>
+    <p class='browser-style'>
         <input type='checkbox' id='input-newtabKeepContainer'/>
         <label for='input-newtabKeepContainer'>labelNewTabKeepContainer</label>
     </p>
     <p>
         <label for='select-externalTabContainerOption'>labelExternalTabSelectContainerOption</label><br/>
-        <select id='select-externalTabContainerOption'>
+        <select id='select-externalTabContainerOption' class='browser-style'>
             <option value='choose' selected=''>labelExternalTabOptionChooseContainer</option>
             <option value='sticky'>labelExternalTabOptionStickyContainer</option>
             <option value='disabled'>labelExternalTabOptionDisabled</option>
@@ -48,7 +48,7 @@
     </p>
     <p>
         <label for='select-groupIndexOption'>labelGroupIndexOption</label><br/>
-        <select id='select-groupIndexOption'>
+        <select id='select-groupIndexOption' class='browser-style'>
             <option value='always' selected=''>labelGroupIndexOptionAlways</option>
             <option value='collapsed'>labelGroupIndexOptionCollapsed</option>
             <option value='never'>labelGroupIndexOptionNever</option>
@@ -56,18 +56,18 @@
     </p>
     <h2 id='optionsHeadingFirefox'>optionsHeadingFirefox</h2>
     <p id='optionsDescriptionFirefox'>optionsDescriptionFirefox</p>
-    <p>
+    <p class='browser-style'>
         <input type='checkbox' id='input-firstPartyIsolate'/>
         <label for='input-firstPartyIsolate'>labelFirstPartyIsolate</label>
     </p>
-    <p>
+    <p class='browser-style'>
         <input type='checkbox' id='input-resistFingerprinting'/>
         <label for='input-resistFingerprinting'>labelResistFingerprinting</label>
     </p>
     <h2 id='optionsHeadingUserData'>optionsHeadingUserData</h2>
     <p>
         <label for='button-clearRecentSites'>labelClearRecentSites</label><br/>
-        <button id='button-clearRecentSites'>buttonClear</button>
+        <button id='button-clearRecentSites' class='browser-style'>buttonClear</button>
     </p>
 </body>
 </html>
