rename .mjs to .js for better development tooling

--- a/src/background.html
+++ b/src/background.html
@@ -20,7 +20,7 @@
   <head>
     <meta charset='utf-8'/>
     <title></title>
-    <script type='module' src='background-wrapper.mjs'></script>
+    <script type='module' src='background-wrapper.js'></script>
     <script src='install.js'></script>
   </head>
   <body></body>
