--- a/src/index/index.html
+++ b/src/index/index.html
@@ -23,7 +23,7 @@
     <link rel='icon' href='/icon.svg'/>
     <link rel='stylesheet' href='chrome://browser/content/extension.css'/>
     <link rel='stylesheet' href='index.css'/>
-    <script type='module' src='index.mjs'></script>
+    <script type='module' src='index.js'></script>
   </head>
   <body>
     <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256' width='256' height='256'>
