--- a/src/navigation/confirm.html
+++ b/src/navigation/confirm.html
@@ -23,7 +23,7 @@
     <link rel='icon' href='/icon.svg'/>
     <link rel='stylesheet' href='chrome://browser/content/extension.css'/>
     <link rel='stylesheet' href='navigation.css'/>
-    <script type='module' src='confirm.mjs'></script>
+    <script type='module' src='confirm.js'></script>
   </head>
   <body>
     <div class='container'>
