--- a/src/options/options.html
+++ b/src/options/options.html
@@ -21,7 +21,7 @@
     <meta charset='utf-8'/>
     <title></title>
     <link rel='stylesheet' href='/options/options.css'/>
-    <script type='module' src='/options/options.mjs'></script>
+    <script type='module' src='/options/options.js'></script>
 </head>
 <body>
     <h2 id='optionsHeadingAppearance'>optionsHeadingAppearance</h2>
