--- a/src/panorama/panorama.html
+++ b/src/panorama/panorama.html
@@ -23,7 +23,7 @@
     <link rel='icon' href='/icon.svg'/>
     <link rel='stylesheet' href='chrome://browser/content/extension.css'/>
     <link rel='stylesheet' href='panorama.css'/>
-    <script type='module' src='panorama.mjs'></script>
+    <script type='module' src='panorama.js'></script>
   </head>
   <body>
     <div id='containers'></div>
