--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -21,7 +21,7 @@
 		<meta charset='utf-8'/>
 		<title>browserActionPopupTitle</title>
 		<link rel='stylesheet' href='popup.css'/>
-		<script type='module' src='popup.mjs'></script>
+		<script type='module' src='popup.js'></script>
 	</head>
 	<body></body>
 </html>
