--- a/src/sidebar/sidebar.html
+++ b/src/sidebar/sidebar.html
@@ -21,7 +21,7 @@
 		<meta charset='utf-8'/>
 		<title>browserActionPopupTitle</title>
 		<link rel='stylesheet' href='sidebar.css'/>
-		<script type='module' src='sidebar.mjs'></script>
+		<script type='module' src='sidebar.js'></script>
 	</head>
 	<body class='sidebar'></body>
 </html>
