--- a/src/pages/navigation/confirm.html
+++ b/src/pages/navigation/confirm.html
@@ -25,8 +25,8 @@
     <meta name='referrer' content='no-referrer'/>
     <link rel='stylesheet' href='chrome://browser/content/extension.css'/>
     <link rel='stylesheet' href='navigation.css'/>
-    <script src='raw:../../../react/react.production.min.js'></script>
-    <script src='raw:../../../react/react-dom.production.min.js'></script>
+    <script src='/react/react.production.min.js'></script>
+    <script src='/react/react-dom.production.min.js'></script>
     <script type='module' src='select-container.tsx'></script>
   </head>
   <body>
