updated debugging.html to support icon theming

--- a/src/pages/debugging/debugging.html
+++ b/src/pages/debugging/debugging.html
@@ -22,7 +22,7 @@
 <head>
   <meta charset='utf-8'/>
   <title></title>
-  <link rel='icon' href='/img/firefox-icons/developer.svg'/>
+  <link rel='icon' href='chrome://global/skin/icons/developer.svg'/>
   <meta name="viewport" content="initial-scale=1,width=device-width"/>
   <link rel="stylesheet" href="chrome://browser/content/extension.css"/>
   <link rel='stylesheet' href='./debugging.css'/>
