--- a/src/pages/options/options.html
+++ b/src/pages/options/options.html
@@ -129,6 +129,7 @@
         <input type='checkbox' id='input-resistFingerprinting'/>
         <label class='browser-style-label' for='input-resistFingerprinting'>labelResistFingerprinting</label>
       </p>
+      <p id='resistFingerprintingWarning'>resistFingerprintingWarning</p>
     </div>
     <div data-pane-name='help'>
     </div>
