feat: add experimental option for sidebar auto-centering

--- a/src/pages/options/options.html
+++ b/src/pages/options/options.html
@@ -73,6 +73,10 @@
         <input type='checkbox' id='input-newtabKeepContainer'/>
         <label class='browser-style-label' for='input-newtabKeepContainer'>labelNewTabKeepContainer</label>
       </p>
+      <p class='browser-style'>
+        <input type='checkbox' id='input-autoCenterInSidebar'/>
+        <label class='browser-style-label' for='input-autoCenterInSidebar'>optionAutoCenterInSidebar</label>
+      </p>
       <p>
         <label class='browser-style-label' for='select-externalTabContainerOption'>labelExternalTabSelectContainerOption</label>
         <select id='select-externalTabContainerOption' class='browser-style'>
